--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -1,14 +1,178 @@
-#page-container-landing {
+#page-landing-container {
     width: 100vw;
     height: 100vh;
     background-color: rgb(16, 21, 7);
 }
 
-#page-landing-image {
-    height: 50vh;
-    width: 50vw;
-    object-fit: cover;
+#page-landing-title-container-table {
+    font-size: 2rem;
     position: absolute;
-    top: 25%;
-    left: 25%;
+    height: 70vh;
+    width: 70vw;
+    z-index: 888;
+    top: 15%;
+    left: 15%;
+    display: flex;
+}
+
+.page-landing-title-container-column-1 {
+    position: relative;
+    height: 100%;
+    width: 15%;
+}
+
+.page-landing-title-container-column-2 {
+    position: relative;
+    height: 100%;
+    width: 70%;
+}
+
+.page-landing-title-container-row-1 {
+    position: relative;
+    width: 100%;
+    height: 15%;
+}
+
+.page-landing-title-container-row-2 {
+    position: relative;
+    width: 100%;
+    height: 70%;
+}
+
+#page-landing-image {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+#page-landing-title-surname {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+}
+
+#page-landing-title-surname span {
+    width: 20%;
+}
+
+.page-landing-title-surname-left {
+    text-align: start;
+}
+
+.page-landing-title-surname-right {
+    text-align: end;
+}
+
+.page-landing-title-surname-center {
+    text-align: center;
+}
+
+#page-landing-title-name-J {
+    position: absolute;
+    right: 0;
+    word-break: break-all;
+    width: 50%;
+    line-height: 1;
+    text-align: end;
+    transition-property: transform;
+    transition-duration: .15s;
+    display: flex;
+    flex-direction: column;
+    z-index: 777;
+}
+
+#page-landing-title-name-M {
+    position: absolute;
+    right: 0;
+    top: 64px;
+    word-break: break-all;
+    width: 50%;
+    line-height: 1;
+    text-align: end;
+    transition-property: transform;
+    transition-duration: .15s;
+    display: flex;
+    flex-direction: column;
+    z-index: 777;
+}
+
+.page-landing-title-name-letter {
+    display: inline;
+}
+
+
+.page-landing-title-name-letter.first:after {
+    font-weight: 200;
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+.page-landing-title-name-letter-hide {
+    transform: scaleY(0);
+    opacity: 0;
+    transform-origin: 0 50%;
+    transition: all 1s ease;
+    max-height: 0;
+}
+
+.page-landing-title-name-letter-right {
+    transition: all 2s ease;
+}
+
+.page-landing-title-name-letter-hide:nth-of-type(1) {
+    transition-delay: 100ms;
+    transition-property: max-height, opacity, transform;
+}
+.page-landing-title-name-letter-hide:nth-of-type(2) {
+    transition-delay: 200ms;
+    transition-property: max-height, opacity, transform;
+}
+.page-landing-title-name-letter-hide:nth-of-type(3) {
+    transition-delay: 300ms;
+    transition-property: max-height, opacity, transform;
+}
+.page-landing-title-name-letter-hide:nth-of-type(4) {
+    transition-delay: 400ms;
+    transition-property: max-height, opacity, transform;
+}
+.page-landing-title-name-letter-hide:nth-of-type(5) {
+    transition-delay: 500ms;
+    transition-property: max-height, opacity, transform;
+}
+.page-landing-title-name-letter-hide:nth-of-type(6) {
+    transition-delay: 600ms;
+    transition-property: max-height, opacity, transform;
+}
+.page-landing-title-name-letter-hide:nth-of-type(7) {
+    transition-delay: 700ms;
+    transition-property: max-height, opacity, transform;
+}
+.page-landing-title-name-letter-hide:nth-of-type(8) {
+    transition-delay: 800ms;
+    transition-property: max-height, opacity, transform;
+}
+.page-landing-title-name-letter-hide:nth-of-type(9) {
+    transition-delay: 900ms;
+    transition-property: max-height, opacity, transform;
+}
+.page-landing-title-name-letter-hide:nth-of-type(10) {
+    transition-delay: 1000ms;
+    transition-property: max-height, opacity, transform;
+}
+.page-landing-title-name-letter-hide:nth-of-type(11) {
+    transition-delay: 1100ms;
+    transition-property: max-height, opacity, transform;
+}
+
+#page-landing-title-name:hover .page-landing-title-name-letter-hide
+ {
+    max-height: 200px;
+    opacity: 1;
+    transform: scaleY(1);
+}
+
+#page-landing-title-name:hover .page-landing-title-name-letter-right {
+    margin-left: 100px;
+    transition: all .2s ease;
 }
