--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -68,27 +68,12 @@
     text-align: center;
 }
 
-#page-landing-title-name-J {
+#page-landing-title-name {
     position: absolute;
     right: 0;
     word-break: break-all;
     width: 50%;
-    line-height: 1;
-    text-align: end;
-    transition-property: transform;
-    transition-duration: .15s;
-    display: flex;
-    flex-direction: column;
-    z-index: 777;
-}
-
-#page-landing-title-name-M {
-    position: absolute;
-    right: 0;
-    top: 64px;
-    word-break: break-all;
-    width: 50%;
-    line-height: 1;
+    line-height: .9;
     text-align: end;
     transition-property: transform;
     transition-duration: .15s;
@@ -114,65 +99,49 @@
     transform-origin: 0 50%;
     transition: all 1s ease;
     max-height: 0;
+    font-size: 2rem;
+    line-height: 1;
 }
 
-.page-landing-title-name-letter-right {
-    transition: all 2s ease;
-}
 
 .page-landing-title-name-letter-hide:nth-of-type(1) {
-    transition-delay: 100ms;
+    transition-delay: 100ms, 100ms, 100ms;
     transition-property: max-height, opacity, transform;
 }
 .page-landing-title-name-letter-hide:nth-of-type(2) {
     transition-delay: 200ms;
-    transition-property: max-height, opacity, transform;
 }
 .page-landing-title-name-letter-hide:nth-of-type(3) {
     transition-delay: 300ms;
-    transition-property: max-height, opacity, transform;
 }
 .page-landing-title-name-letter-hide:nth-of-type(4) {
     transition-delay: 400ms;
-    transition-property: max-height, opacity, transform;
 }
 .page-landing-title-name-letter-hide:nth-of-type(5) {
     transition-delay: 500ms;
-    transition-property: max-height, opacity, transform;
 }
 .page-landing-title-name-letter-hide:nth-of-type(6) {
     transition-delay: 600ms;
-    transition-property: max-height, opacity, transform;
 }
 .page-landing-title-name-letter-hide:nth-of-type(7) {
     transition-delay: 700ms;
-    transition-property: max-height, opacity, transform;
 }
 .page-landing-title-name-letter-hide:nth-of-type(8) {
     transition-delay: 800ms;
-    transition-property: max-height, opacity, transform;
 }
 .page-landing-title-name-letter-hide:nth-of-type(9) {
     transition-delay: 900ms;
-    transition-property: max-height, opacity, transform;
 }
 .page-landing-title-name-letter-hide:nth-of-type(10) {
     transition-delay: 1000ms;
-    transition-property: max-height, opacity, transform;
 }
 .page-landing-title-name-letter-hide:nth-of-type(11) {
     transition-delay: 1100ms;
-    transition-property: max-height, opacity, transform;
 }
 
-#page-landing-title-name:hover .page-landing-title-name-letter-hide
- {
+
+#page-landing-title-name:hover .page-landing-title-name-letter-hide{
     max-height: 200px;
     opacity: 1;
     transform: scaleY(1);
-}
-
-#page-landing-title-name:hover .page-landing-title-name-letter-right {
-    margin-left: 100px;
-    transition: all .2s ease;
 }
