--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,8 +1,9 @@
 #menu-container {
     width: 100%;
     height: 100%;
-    position: relative;
-    z-index: 999;
+    position: fixed;
+    z-index: 666;
+    color: rgb(207, 148, 22);
 }
 
 #menu-list-item-tl {
