--- a/src/pages/Skills.css
+++ b/src/pages/Skills.css
@@ -1,5 +1,5 @@
 #page-skills-container {
-    background-color: rgb(8, 8, 9);
+    background-color: var(--color-background);
     width: 100vw;
     height: 100vh;
     position: relative;
@@ -12,6 +12,7 @@
     top: 15%;
     left: 15%;
     display: flex;
+    z-index: 995;
 }
 
 .table-column-1 {
@@ -68,3 +69,11 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
+#button-projects {
+    border: 1px solid var(--color-secondary);
+    padding: 4px;
+    text-decoration: none;
+
+}
+
