--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,23 @@
+:root {
+    --color-primary: rgb(222, 66, 166);
+    --color-secondary: rgb(255, 197, 38);
+    --color-background: rgb(8, 8, 9);
+}
+
 body {
     overflow-x: hidden;
     position: relative;
-    color: rgb(207, 148, 22);
+    color: var(--color-primary);
+    box-sizing: border-box;
+    
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 a {
-    color: rgb(207, 148, 22);
+    color: var(--color-primary);
 }
 
 
