--- a/src/components/SocialBar.css
+++ b/src/components/SocialBar.css
@@ -1,15 +1,51 @@
-#socialbar-container {
+.socialbar-container {
     width: 100vw;
     height: fit-content;
     position: absolute;
-    bottom: 20px;
+    bottom: 40px;
+    z-index: 777;
+}
+
+.fixed {
+    position: fixed;
+    top: 32px;
+    bottom: auto;
+    z-index: 888;
 }
 
 #socialbar-list {
     display: flex;
     justify-content: center;
+    list-style: none;
 }
 
 #socialbar-list li {
     width: 50px;
+}
+
+.hide-email {
+    display: none;
+}
+
+.show-email {
+    display: inline-block;
+    padding-left: 20px;
+}
+
+#socialbar-email {
+    display: flex;
+    align-items: flex-end;
+}
+
+#copy-email {
+    margin-left: 8px;
+    width: 20px;
+    height: 20px;
+    z-index: 999;
+    position: absolute;
+}
+
+#socialbar-list--item-email {
+    display: flex;
+    align-items: flex-end;
 }
