--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -1,7 +1,8 @@
 #page-landing-container {
     width: 100vw;
     height: 100vh;
-    background-color: rgb(16, 21, 7);
+    background-color: var(--color-background);
+    position: relative;
 }
 
 #page-landing-title-container-table {
@@ -10,9 +11,10 @@
     height: 70vh;
     width: 70vw;
     z-index: 888;
-    top: 15%;
-    left: 15%;
+    top: 15vh;
+    left: 15vw;
     display: flex;
+    color: var(--color-secondary);
 }
 
 .page-landing-title-container-column-1 {
@@ -95,7 +97,6 @@
 
 .page-landing-title-name-letter-hide {
     transform: scaleY(0);
-    opacity: 0;
     transform-origin: 0 50%;
     transition: all 1s ease;
     max-height: 0;
@@ -142,7 +143,6 @@
 
 #page-landing-title-name:hover .page-landing-title-name-letter-hide{
     max-height: 200px;
-    opacity: 1;
     transform: scaleY(1);
 }
 
