--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -4,6 +4,7 @@
     position: absolute;
     bottom: -20vh;
     background-color: rgb(21, 21, 22);
+    color: rgb(89, 88, 85);
 }
 
 .table {
@@ -13,7 +14,6 @@
     top: 15%;
     left: 15%;
     display: flex;
-    color: var(--color-secondary);
 }
 
 .f-table-column-1 {
