--- a/src/components/SocialBar.css
+++ b/src/components/SocialBar.css
@@ -49,3 +49,21 @@
     display: flex;
     align-items: flex-end;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .socialbar-container {
+        position: fixed;
+        top: 0px;
+        bottom: auto;
+        z-index: 998;
+        background-color: rgb(6, 6, 6);
+        height: 80px;
+        padding-top: 32px;
+    }
+
+    #socialbar-list {
+        justify-content: flex-start;
+        padding-left: 20px;
+    }
+}
