--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -25,3 +25,10 @@
 .underline {
     text-decoration: underline;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    #contact-container h2 {
+        font-size: 1.9rem;
+    }
+}
