--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -16,72 +16,11 @@
     flex-direction: column;
 }
 
-#projects-overview-container div:nth-child(1){
-    position: relative;
-}
-
-#projects-overview-primary-image {
-    height: 70vh;
-    width: 70vh;
-    object-fit: cover;
-    border-radius: 5%;
-}
-
-#projects-overview-primary-title {
-    position: absolute;
-    left: 50vh;
-    top: 25%;
-    height: 50%;
-    text-align: start;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    font-size: 3rem;
-}
-
-#projects-overview-year {
-    height: fit-content;
-    position: absolute;
-    right: 0;
-    top: 0;
-    font-style: italic;
-    color: var(--color-secondary);
-}
-
-#projects-overview-desc-container {
-    position: absolute;
-    right: 0;
-    width: 20vw;
-    bottom: 0;
-    text-align: justify;
-
-}
-
-#projects-overview-expand-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-#projects-socialbar {
-    position: absolute;
-    top: 100px;
-    z-index: 0;
-}
-
-#projects-overview-expand-container {
-    position: absolute;
-    color: var(--color-secondary);
-    width: 100px;
-    height: 100px;
-    z-index: 888;
-}
-
-#projects-overview-expand-container i{
-    margin: 20px;
-}
-
-#projects-overview-expanded-container {
-    margin-top: 70px;
-    border: 1px solid var(--color-secondary);
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+   #projects-overview-container {
+    overflow: visible;
+    width: 80vw;
+    left: 0vw;
+   }
 }
