feat: responsice design mobile

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -61,3 +61,10 @@
         right: 20px;
     }
 }
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    #menu-container {
+        font-size: 1.6rem;
+    }
+}
