--- a/src/pages/NewLanding.css
+++ b/src/pages/NewLanding.css
@@ -200,7 +200,16 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+    #page-landing-content-container {
+        width: 80vw;
+        height: 80vh;
+        font-size: 5rem;
+    }
 
+    #page-landing-description {
+        font-size: 1.6rem;
+        bottom: 12%;
+    }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
