feat: responsive design and imprint page

--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -26,6 +26,22 @@
     text-decoration: underline;
 }
 
+.up-down-animation {
+    animation: moveUpDown 3s ease-in-out infinite;
+}
+
+@keyframes moveUpDown {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-30px);
+    }
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     #contact-container h2 {
