--- a/src/screens/NewMenu.css
+++ b/src/screens/NewMenu.css
@@ -1,13 +1,5 @@
-/* #menu-container {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 666;
-    
-}
-
 #menu-list-item-tl {
-    position: absolute;
+    position: fixed;
     top: 40px;
     left: 40px;
     padding: 4px 0 0 4px;
@@ -16,14 +8,14 @@
 }
 
 #menu-list-item-tr {
-    position: absolute;
+    position: fixed;
     top: 40px;
     right: 40px;
     padding: 5px 5px 0 0;
 }
 
 #menu-list-item-bl {
-    position: absolute;
+    position: fixed;
     bottom: 40px;
     left: 40px;
     padding: 0 0 4px 4px;
@@ -32,7 +24,7 @@
 }
 
 #menu-list-item-br {
-    position: absolute;
+    position: fixed;
     bottom: 40px;
     right: 40px;
     padding: 0 4px 4px 0;
@@ -46,4 +38,27 @@
 
 #menu-list {
     list-style: none;
+}
+
+#menu-list li {
+    cursor: pointer;
+    z-index: 999;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    #menu-list-item-tl, #menu-list-item-bl, #menu-list-item-br{
+        display: none;
+    }
+
+    #menu-list-item-tr {
+        right: 20px;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    #menu-container {
+        font-size: 1.6rem;
+    }
 }
